deploy: af46375fd7532a53dd532e611e1086ee9d6b9d96

--- a/quickstart/gettingstarted/index.html
+++ b/quickstart/gettingstarted/index.html
@@ -178,6 +178,7 @@ class MainWindow(BaseMainWindow):
         self.label.setVisible(True)
 
 </code></pre>
+<p><code>main_window.py</code> is where your application's MainWindow is defined.</p>
               
             </div>
           </div>
