deploy: ebce58dcd54b81b6dd3580a7d99ed9fbb3b7e0c9

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <div class="section">
               
                 <h1 id="welcome-to-qtstraps-documentation">Welcome to qtstrap's documentation</h1>
+<p>qtstrap is a framework that helps you skip over the boring and tedious parts of developing applications with PySide2/PyQt. </p>
 <h1 id="features">Features</h1>
 <ul>
 <li><code>qtstrap</code> command line tool to bootstrap new projects</li>
@@ -122,6 +123,16 @@
 <li>custom Qt widgets with useful behaviors</li>
 <li>Pythonic layout system using ContextLayouts</li>
 <li>Some other stuff I haven't remembered yet</li>
+</ul>
+<h1 id="roadmap">Roadmap</h1>
+<ul>
+<li>Use QtPy to become PySide2/PyQt agnostic</li>
+<li>Write documentation for ContextLayouts</li>
+<li>Find a way to for BaseApplication to pull app info from project.ini</li>
+<li>Create a sane menu bar constructor</li>
+<li>Create an application auto-updater</li>
+<li>Create an application crash reporter</li>
+<li>Set up CI/CD</li>
 </ul>
               
             </div>
