deploy: a3a2eec7900aadd3e1e58449fd1e4157d52fbeb9

--- a/quickstart/context_layouts/index.html
+++ b/quickstart/context_layouts/index.html
@@ -127,21 +127,21 @@ button3 = QPushButton(&quot;Three&quot;)
 button4 = QPushButton(&quot;Four&quot;)
 
 layout = QVBoxLayout()
+window.setLayout(layout)
 
 hbox1 = QHBoxLayout()
+layout.addLayout(hbox1)
 hbox1.addWidget(button1)
 hbox1.addWidget(button2)
 
 hbox2 = QHBoxLayout()
+layout.addLayout(hbox2)
 hbox2.addWidget(button3)
 hbox2.addWidget(button4)
-
-layout.addLayout(hbox1)
-layout.addLayout(hbox2)
-
-window.setLayout(layout)
 </code></pre>
-<p>It works, but it's extremely ugly.</p>
+<p>This is only 4 buttons and it's already extremely ugly. Each nested layout needs a unique name. Every time you create a new layout you have to shift gears to add it to its parent. Don't even get me started on how pointless the distinction between <code>.addWidget()</code> and <code>.addLayout()</code> is. There isn't even a hint about what this layout will look like when it's built. We haven't even started messing with attributes like margins or alignments yet!</p>
+<p>This is <em>definitely</em> not pythonic.</p>
+<p>Enter, the Context Layout:</p>
 <pre><code class="language-py">window = QWidget()
 button1 = QPushButton(&quot;One&quot;)
 button2 = QPushButton(&quot;Two&quot;)
@@ -149,13 +149,15 @@ button3 = QPushButton(&quot;Three&quot;)
 button4 = QPushButton(&quot;Four&quot;)
 
 with CVBoxLayout(window) as layout:
-    with layout.hbox() as layout:
+    with layout.hbox():
         layout.add(button1)
         layout.add(button2)
-    with layout.hbox() as layout:
+    with layout.hbox():
         layout.add(button3)
         layout.add(button4)
 </code></pre>
+<p>All of the backtracking and repetition is gone. The pointless effort of naming each layout is gone. The indentation helps show the structure of the layout.</p>
+<p>The top level <code>CVBoxLayout</code> adds itself to its parent correctly and automatically. The <code>.add()</code> method can handle a layout or a widget or even a mixed list of both.</p>
               
             </div>
           </div>
