deploy: a16f623b4b2169deae96555e4e1d2699a0bbc1b1

--- a/quickstart/installation/index.html
+++ b/quickstart/installation/index.html
@@ -136,7 +136,7 @@ $ qtstrap init
 <pre><code class="language-sh">$ make run
 </code></pre>
 <p>If you see a window like this, then you're good to go:</p>
-<p><img alt="screenshot" src="screenshot1.png" /> </p>
+<p><img alt="screenshot" src="../../screenshot1.png" /> </p>
               
             </div>
           </div>
