--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 <li>Create an application auto-updater</li>
 <li>Create an application crash reporter</li>
 <li>Set up CI/CD</li>
+<li>Add 'Qt principles' section</li>
 </ul>
               
             </div>
