deploy: 883697bf74633a61b2d267da91caa78ab0035260

--- a/quickstart/gettingstarted/index.html
+++ b/quickstart/gettingstarted/index.html
@@ -125,12 +125,11 @@
 <p>This will create a project skeleton in your current directory.</p>
 <h2 id="mainpy"><code>main.py</code></h2>
 <pre><code class="language-py">from qtstrap import *
-import app_info
 
 
 def run():
     # create the fundamental Qt objects
-    app = BaseApplication(app_info=app_info)
+    app = BaseApplication()
     window = BaseMainWindow()
 
     # make everything a little easier to see
