--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         <div class="rst-content"><div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
     <li><a href="." class="icon icon-home" alt="Docs"></a> &raquo;</li>
-          <li>Overview &raquo;</li><li>Home</li>
+          <li>Overview &raquo;</li>
+      <li>Home</li>
     <li class="wy-breadcrumbs-aside">
         <a href="https://github.com/qtstrap/qtstrap/edit/master/docs/index.md"> Edit on qtstrap/qtstrap</a>
     </li>
   </ul>
   <hr/>
 </div>
-
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
