--- a/quickstart/gettingstarted/index.html
+++ b/quickstart/gettingstarted/index.html
@@ -86,14 +86,14 @@
   <ul class="wy-breadcrumbs">
     <li><a href="../.." class="icon icon-home" alt="Docs"></a> &raquo;</li>
           <li>Overview &raquo;</li>
-          <li>Quickstart &raquo;</li><li>Getting Started</li>
+          <li>Quickstart &raquo;</li>
+      <li>Getting Started</li>
     <li class="wy-breadcrumbs-aside">
         <a href="https://github.com/qtstrap/qtstrap/edit/master/docs/quickstart/gettingstarted.md"> Edit on qtstrap/qtstrap</a>
     </li>
   </ul>
   <hr/>
 </div>
-
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
