--- a/structure/makefile/index.html
+++ b/structure/makefile/index.html
@@ -84,14 +84,14 @@
   <ul class="wy-breadcrumbs">
     <li><a href="../.." class="icon icon-home" alt="Docs"></a> &raquo;</li>
           <li>Overview &raquo;</li>
-          <li>Project Structure &raquo;</li><li>Makefile</li>
+          <li>Project Structure &raquo;</li>
+      <li>Makefile</li>
     <li class="wy-breadcrumbs-aside">
         <a href="https://github.com/qtstrap/qtstrap/edit/master/docs/structure/makefile.md"> Edit on qtstrap/qtstrap</a>
     </li>
   </ul>
   <hr/>
 </div>
-
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
