--- a/index.html
+++ b/index.html
@@ -177,26 +177,25 @@
 <li>crossplatform makefile with useful development commands</li>
 <li>preconfigured pyinstaller spec file</li>
 <li>preconfigured InnoSetup setup compiler script</li>
-<li>custom Qt widgets with useful behaviors</li>
 <li>Pythonic layout system using ContextLayouts</li>
 <li>light/dark theme with application-level theme switching</li>
-<li><code>extras</code>:</li>
-<li>CommandPalette, like VSCode or SublimeText</li>
-<li>Logging Subsystem: log to local database + log viewer widgets</li>
-<li>CodeEditor: Custom QTextEditor subclass customized for code editing</li>
 <li>Some other stuff I haven't remembered yet</li>
 </ul>
-<h2 id="widget-types">Widget types</h2>
+<h1 id="custom-widgets">Custom Widgets</h1>
 <ul>
-<li>Buttons:</li>
+<li>LabelEdit</li>
+<li>HLine and VLine</li>
+<li>LinkLabel</li>
+</ul>
+<h2 id="buttons">Buttons:</h2>
+<ul>
 <li>StateButton</li>
 <li>IconToggleButton</li>
 <li>ConfirmToggleButton</li>
 <li>MenuButton</li>
-<li>LabelEdit</li>
-<li>HLine and VLine</li>
-<li>LinkLabel</li>
-<li>Persistent Widgets (for rapid prototyping of saved data)</li>
+</ul>
+<h2 id="persistent-widgets-for-rapid-prototyping-of-saved-data">Persistent Widgets (for rapid prototyping of saved data)</h2>
+<ul>
 <li>PersistentCheckableAction</li>
 <li>PersistentCheckBox</li>
 <li>PersistentComboBox</li>
@@ -207,19 +206,29 @@
 <li>PersistentTextEdit</li>
 <li>PersistentTreeWidget</li>
 </ul>
-<h2 id="utility-classes-and-functions">Utility Classes and Functions</h2>
+<h1 id="utility-classes-and-functions">Utility Classes and Functions</h1>
 <ul>
 <li>Adapter</li>
-<li>SignalBlocker</li>
 <li>TimeStamp</li>
 <li>StringBuilder</li>
 <li>call_later()</li>
-<li>decorators:</li>
-<li>@accepts_file_drops()</li>
+</ul>
+<h2 id="decorators">decorators:</h2>
+<ul>
+<li>@accepts_file_drops</li>
 <li>@trace</li>
 <li>@singleton</li>
-<li>context managers:</li>
+</ul>
+<h2 id="context-managers">context managers:</h2>
+<ul>
 <li>Defer</li>
+<li>SignalBlocker</li>
+</ul>
+<h1 id="qtstrapextras">qtstrap.extras:</h1>
+<ul>
+<li>CommandPalette, like VSCode or SublimeText</li>
+<li>Logging Subsystem: log to local database + log viewer widgets</li>
+<li>CodeEditor: Custom QTextEditor subclass customized for code editing</li>
 </ul>
 <h1 id="roadmap">Roadmap</h1>
 <ul>
