deploy: 58396fbeedae0b39fa17016677be9b392f124703

--- a/quickstart/installation/index.html
+++ b/quickstart/installation/index.html
@@ -186,9 +186,9 @@
       <div class="wy-nav-content">
         <div class="rst-content"><div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
-    <li><a href="../.." class="icon icon-home" aria-label="Docs"></a> &raquo;</li>
-          <li>Overview &raquo;</li>
-          <li>Quickstart &raquo;</li>
+    <li><a href="../.." class="icon icon-home" aria-label="Docs"></a></li>
+          <li class="breadcrumb-item">Overview</li>
+          <li class="breadcrumb-item">Quickstart</li>
       <li class="breadcrumb-item active">Installation</li>
     <li class="wy-breadcrumbs-aside">
           <a href="https://github.com/qtstrap/qtstrap/edit/master/docs/quickstart/installation.md">Edit on qtstrap/qtstrap</a>
@@ -209,7 +209,7 @@
 <pre><code class="language-sh">$ mkdir test &amp;&amp; cd test
 $ python3 -m venv .venv
 $ source .venv/bin/activate
-$ python3 -m pip install qtstrap PySide2
+$ python3 -m pip install qtstrap PySide6
 $ qtstrap init
 </code></pre>
 <p>The init script will prompt you to enter the name of your application and the name of its publisher(which is probably you), and then it will generate an application skeleton. At this point you can deactivate the virtual environment and forget it exists(until you need to add a package or something).</p>
