--- a/quickstart/context_layouts/index.html
+++ b/quickstart/context_layouts/index.html
@@ -186,9 +186,9 @@
       <div class="wy-nav-content">
         <div class="rst-content"><div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
-    <li><a href="../.." class="icon icon-home" aria-label="Docs"></a> &raquo;</li>
-          <li>Overview &raquo;</li>
-          <li>Quickstart &raquo;</li>
+    <li><a href="../.." class="icon icon-home" aria-label="Docs"></a></li>
+          <li class="breadcrumb-item">Overview</li>
+          <li class="breadcrumb-item">Quickstart</li>
       <li class="breadcrumb-item active">Context Layouts</li>
     <li class="wy-breadcrumbs-aside">
           <a href="https://github.com/qtstrap/qtstrap/edit/master/docs/quickstart/context_layouts.md">Edit on qtstrap/qtstrap</a>
